test/runtime/fail/runtime/concat_nil.hy

// expect error: Expected string, found number

let a = 3
let b = a .. "hello!"
